# how-to-optimize-gemm-opencl

./: .gitignore  CMakeLists.txt  README.md  kernels.cl  main.cpp  plot.py  run.py  settings.hpp
kernels/: GEMM0.cl  GEMM1.cl  GEMM2.cl  mnn_matmul_buf.cl  opencv_dnn_gemm_buffer.cl  opencv_gemm.cl  opencv_gemm_buffer.cl  opencv_intel_gemm.cl
tools/: CMakeLists.txt  README.md  cublas_timing.cu
utils/: common.cpp  common.hpp  gemm_executor.cpp  gemm_executor.hpp  init_vector.cpp  init_vector.hpp  opencl_runtime.cpp  opencl_runtime.hpp  opencv_gemm_executor.cpp  opencv_gemm_executor.hpp  timer.hpp
